# code-challenge-submission

./: .gitignore  AGENTS.md  Dockerfile  PROMPTS.md  README.md  pyproject.toml  scalene-profile.html  scalene-profile.json
src/: main.py  processor.py
src/data_cli/: __init__.py  config.py  main.py
src/data_cli/core/: models.py  processor.py
src/data_cli/io/: reader.py  writer.py
tests/: test_main.py  test_processor.py
tests/test_core/: test_processor.py
tests/test_io/: test_io.py
