[project]
name = "data-cli"
version = "0.1.0"
description = "A data processing CLI tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.10.0",
    "polars>=1.20.0",
    "ruff>=0.9.0",
    "scalene>=2.1.4",
]

[project.scripts]
data-cli = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
